Try using virtual threads