@@ -9,18 +9,13 @@ import dk.alexandra.fresco.framework.builder.ProtocolBuilder;
 import dk.alexandra.fresco.framework.network.Network;
 import dk.alexandra.fresco.framework.sce.resources.ResourcePool;
 import dk.alexandra.fresco.suite.ProtocolSuite;
-import java.time.Duration;
-import java.util.Objects;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.time.Duration;
+import java.util.Objects;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * Secure Computation Engine - responsible for having the overview of things and setting everything
@@ -95,11 +90,7 @@ public class SecureComputationEngineImpl
   @Override
   public synchronized void setup() {
     if (!this.setup) {
-      this.executorService = Executors.newCachedThreadPool(r -> {
-        Thread thread = new Thread(r, "SCE-" + threadCounter.getAndIncrement());
-        thread.setDaemon(true);
-        return thread;
-      });
+      this.executorService = Executors.newVirtualThreadPerTaskExecutor();
       this.setup = true;
     }
   }
